--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,6 @@
 	
 	<string name="no_files">No Files</string>
 
+	<string name="search_label">Search File</string>
+	<string name="search_hint">Search File</string>
 </resources>
